--- a/docs/docker/安装.md
+++ b/docs/docker/安装.md
@@ -1,37 +1,133 @@
-# 一、安装前准备工作
+# Docker安装
+
+## 一、安装前准备工作
 1.1 查看服务器系统版本以及内核版本
 
-``` powershell
+``` shell
 cat /etc/redhat-release
 ```
+
 1.2 查看服务器内核版本
-``` powershell
+
+``` shell
 uname -r
 ```
+
 1.3 安装依赖包
-``` powershell
+
+``` shell
 yum install -y yum-utils device-mapper-persistent-data lvm2
 ```
+
 1.4 设置阿里云docker-ce镜像源
-``` powershell
+
+``` shell
 yum-config-manager --add-repo https://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
 
 ```
-# 二、安装Docker
+
+## 二、安装Docker
+
 2.1 Docker版本说明
-> Docker从17.03版本之后分为两个版本：社区版（Community Edition，缩写为 CE）和企业版（Enterprise Edition，缩写为 EE）。  
+
+> Docker从17.03版本之后分为两个版本：社区版（Community Edition，缩写为 CE）和企业版（Enterprise Edition，缩写为 EE）。
 企业版包含了一些收费服务，个人开发者一般用不到，所以我们只需要安装社区版docker-ce版本即可。  
 
 2.2 docker-ce安装
-``` powershell
+
+``` shell
 yum install -y docker-ce
 ```
+
 2.3 启动docker并设置开机自启
-``` powershell
+
+``` shell
 #启动docker命令
 systemctl start docker
 #设置开机自启命令
 systemctl enable docker
 #查看docker版本命令
 docker version
+```
+
+2.4 配置阿里云镜像加速器
+
+``` shell
+#创建docker配置文件目录
+mkdir -p /etc/docker 
+#添加配置内容
+tee /etc/docker/daemon.json <<-'EOF'
+ {
+  "registry-mirrors": [
+    "https://docker.1panelproxy.com",
+    "https://2m11665s.mirror.aliyuncs.com",
+    "https://registry.docker-cn.com",
+    "https://dockerhub.azk8s.cn",
+    "https://docker.mirrors.ustc.edu.cn",
+    "http://hub-mirror.c.163.com",
+    "https://k8s.gcr.io",
+    "https://github-releases.githubusercontent.com",
+    "https://vsxcs7sq.mirror.aliyuncs.com",
+    "https://ustc-edu-cn.mirror.aliyuncs.com"]
+}
+EOF
+#重启docker
+systemctl restart docker
+```
+## 三、Docker基本概念介绍
+
+3.1 仓库 (repository)
+
+> docker仓库是用来保存镜像的地方。镜像构建完成后，可以直接在当前宿主机上运行，但是如果需要在其它服务器上使用这个镜像，
+就需要一个集中存储、分发镜像的服务，docker仓库就是这样的一个服务。
+
+3.2 镜像(Image)
+
+> 这里面保存了应用和需要的依赖环境，比如运行的runtime和webapp等。
+为什么需要多个镜像？当开发、构建和运行容器化应用程序时，我们通常会有不同优先级。通过为这些独立的任务提供不同镜像 
+
+3.3 容器(Container)
+
+> 镜像的实例。一个容器代表一个正在运行的应用程序、进程或服务。它由 Docker 镜像、执行环境和标准指令集组成。需要扩展服务时，才
+真正将镜像跑起来的东西，镜像在容器里面。可以看作是一个完全隔离的盒子。一个容器镜像实例代表一个独立的进程。
+
+## 四、Docker常用命令
+
+``` shell
+docker search --镜像名    搜索仓库镜像
+
+docker pull --镜像名    拉取镜像
+
+docker ps     查看目前正在运行的所有容器 （-a 显示包括已经停止的容器）
+
+docker rmi image_id/image_name    删除镜像
+
+docker build    使用Dockerfile创建镜像
+
+docker run    运行容器
+
+docker exec    进入容器中执行命令 （例如:docker exec -it  container_id/container_name /bin/bash）
+
+docker logs  container_id/container_name   查看容器日志（例如:docker logs -f -t --tail 10 container_id ）
+
+docker start  container_id/container_name    启动容器
+
+docker restart  container_id/container_name    重启容器
+
+docker stop container_id/container_name    停止容器
+
+docker rm container_id/container_name    删除容器（只能删除已停止的容器）
+
+更多的命令可以通过docker help命令来查看。
+
+```
+
+## 五、卸载Docker
+
+``` shell
+#删除docker-ce命令
+yum remove docker-ce
+#删除镜像、容器、配置文件等内容
+rm -rf /var/lib/containerd
+rm -rf /var/lib/docker
 ```
