优化安装mysql文档

--- a/docs/docker/软件部署.md
+++ b/docs/docker/软件部署.md
@@ -91,7 +91,7 @@ docker restart redis
 | 命令                                                 | 描述                                                         |
 | ---------------------------------------------------- | ------------------------------------------------------------ |
 | docker pull minio/minio                              | 下载最新版Minio镜像 (其实此命令就等同于 : docker pull minio/minio:latest ) |
-| docker pull minio/minio:RELEASE.2023-10-24T04-42-36Z | 下载指定版本的Minio镜像 (xxx指具体版本号)                    |
+| docker pull minio/minio:RELEASE.2023-10-24T04-42-36Z | 下载指定版本的Minio镜像 (RELEASE.2023-10-24T04-42-36Z指具体版本号)                    |
 
 2. 创建目录
 
@@ -126,7 +126,9 @@ docker run -p 9000:9000 -p 9090:9090      --net=host      --name minio      -d -
 ```
 
 > 9090端口指的是minio的客户端端口
+>
 > MINIO_ACCESS_KEY ：账号
+>
 > MINIO_SECRET_KEY ：密码（账号长度必须大于等于5，密码长度必须大于等于8位）
 
 4. 访问操作
@@ -140,7 +142,7 @@ docker run -p 9000:9000 -p 9090:9090      --net=host      --name minio      -d -
 | 命令                     | 描述                                                         |
 | ------------------------ | ------------------------------------------------------------ |
 | docker pull mysql        | 下载最新版MySQL镜像 (其实此命令就等同于 : docker pull mysql:latest ) |
-| docker pull mysql:8.0.33 | 下载指定版本的MySQL镜像 (xxx指具体版本号)                    |
+| docker pull mysql:8.0.33 | 下载指定版本的MySQL镜像 (8.0.33指具体版本号)                    |
 
 2. 创建目录
 
@@ -182,16 +184,6 @@ default-time_zone = '+8:00'
 
 4. 启动MySQL容器
 
->-p表示端口映射
-> --restart=always表示容器退出时总是重启
-> --name表示容器命名
-> --privileged=true表示赋予容器权限修改宿主文件权利
-> -v /home/mysql/log:/var/log/mysql表示容器日志挂载到宿主机
-> -v /home/mysql/data:/var/lib/mysql表示容器存储文件挂载到宿主机
-> -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf表示容器配置文件挂载到宿主机
-> -e MYSQL_ROOT_PASSWORD=a12bCd3_W45pUq6表示设置mysql的root用户密码,建议用强密码
-> -d表示后台运行
-
 ``` shell
 docker run \
 -p 3306:3306 \
@@ -204,3 +196,16 @@ docker run \
 -e MYSQL_ROOT_PASSWORD=root \
 -d mysql:8.0.33
 ```
+
+| 命令                    | 功能                                         |
+| :---------------------- | :------------------------------------------- |
+| -p                        | 表示端口映射                                 |
+| --restart=always        | 表示容器退出时总是重启 |
+| --name                   | 表示容器命名                    |
+| --privileged=true              | 表示赋予容器权限修改宿主文件权利 |
+| -v /home/mysql/log:/var/log/mysql              | 表示容器日志挂载到宿主机 |
+| -v /home/mysql/data:/var/lib/mysql  | 表示容器存储文件挂载到宿主机 |
+| -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf | 表示容器配置文件挂载到宿主机 |
+|-e MYSQL_ROOT_PASSWORD=a12bCd3_W45pUq6 | 表示设置mysql的root用户密码,建议用强密码 |
+| -d            | 表示后台运行 |
+
