``` docs: 更新文档配置和Docker部署指南
- 更新版权年份从2025到2025-2026
- 修复Redis部署文档中的shell代码块格式
- 调整Markdown表格列宽以改善显示效果
- 统一文档中命令行代码块的格式为```shell
- 修正MySQL和Minio部署文档中的格式和描述
- 更新首页标语为"记录成长，分享价值"
```

--- a/docs/docker/软件部署.md
+++ b/docs/docker/软件部署.md
@@ -36,7 +36,7 @@ touch /opt/redis/conf/redis.conf
 
 3. 创建 Redis 容器并启动
 
-``` shell
+```shell
 # Docker 创建 Redis 容器命令
 docker run \
 --restart=always \
@@ -48,65 +48,65 @@ docker run \
 -v /opt/redis/data:/data \
 -d redis redis-server /etc/redis/redis.conf \
 --appendonly yes \
---requirepass 123456 
+--requirepass 123456
 ```
 
-| 命令                    | 功能                                         |
-| :---------------------- | :------------------------------------------- |
-| docker run              | 这是 Docker 用来创建并运行一个新的容器的命令 |
-| --restart=always        | 如果容器退出，这个选项会使得它自动重启       |
-| --log-opt max-size=100m | 这是对容器日志的设置，最大大小为 100MB |
-| --log-opt max-file=2              | 这是对容器日志文件的设置，最多可以有2个日志文件 |
-| -p 6379:6379              | 这是端口映射的设置，将宿主机的6379端口映射到容器的6379端口 |
-| --name redis  | 这是给新创建的容器命名的选项，名字是 "redis" |
-| -v /opt/myredis/redis.conf:/etc/redis/redis.conf | 这是对容器内的文件系统的挂载设置，将宿主机上的 /opt/myredis/redis.conf 文件挂载到容器内的 /etc/redis/redis.conf 位置 |
-| -v /opt/myredis/data:/data | 这是另一个文件系统的挂载选项，将宿主机上的 /opt/myredis/data 目录挂载到容器内的 /data目录 |
-| -d            | 这是 Docker 的分离模式，新创建的进程将会在后台运行 |
+| 命令                                                                           | 功能                                                                                                                              |
+| :----------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------- |
+| docker run                                                                     | 这是 Docker 用来创建并运行一个新的容器的命令                                                                                      |
+| --restart=always                                                               | 如果容器退出，这个选项会使得它自动重启                                                                                            |
+| --log-opt max-size=100m                                                        | 这是对容器日志的设置，最大大小为 100MB                                                                                            |
+| --log-opt max-file=2                                                           | 这是对容器日志文件的设置，最多可以有 2 个日志文件                                                                                 |
+| -p 6379:6379                                                                   | 这是端口映射的设置，将宿主机的 6379 端口映射到容器的 6379 端口                                                                    |
+| --name redis                                                                   | 这是给新创建的容器命名的选项，名字是 "redis"                                                                                      |
+| -v /opt/myredis/redis.conf:/etc/redis/redis.conf                               | 这是对容器内的文件系统的挂载设置，将宿主机上的 /opt/myredis/redis.conf 文件挂载到容器内的 /etc/redis/redis.conf 位置              |
+| -v /opt/myredis/data:/data                                                     | 这是另一个文件系统的挂载选项，将宿主机上的 /opt/myredis/data 目录挂载到容器内的 /data 目录                                        |
+| -d                                                                             | 这是 Docker 的分离模式，新创建的进程将会在后台运行                                                                                |
 | redis redis-server /etc/redis/redis.conf --appendonly yes --requirepass 123456 | 这是容器内要运行的命令，启动 Redis 服务，使用 /etc/redis/redis.conf 配置文件，设置追加写入(appendonly)为 yes，设置密码为 "123456" |
 
-4. Redis配置文件修改
+4. Redis 配置文件修改
 
-``` shell
+```shell
 # 修改 /opt/redis/conf/redis.conf
 protected-mode no
 bind 0.0.0.0
 ```
 
-| 命令              | 功能                                                         |
-| ----------------- | ------------------------------------------------------------ |
-| protected-mode no | 关闭protected-mode模式，此时外部网络可以直接访问 (docker貌似自动开启了) |
-| bind 0.0.0.0      | 设置所有IP都可以访问 (docker貌似自动开启了)                  |
+| 命令              | 功能                                                                       |
+| ----------------- | -------------------------------------------------------------------------- |
+| protected-mode no | 关闭 protected-mode 模式，此时外部网络可以直接访问 (docker 貌似自动开启了) |
+| bind 0.0.0.0      | 设置所有 IP 都可以访问 (docker 貌似自动开启了)                             |
 
-5. REM远程连接
+5. REM 远程连接
 
-``` shell
+```shell
 # 重启redis服务
 docker restart redis
 ```
 
 ## Minio
 
-1. 下载Minio镜像
+1. 下载 Minio 镜像
 
-| 命令                                                 | 描述                                                         |
-| ---------------------------------------------------- | ------------------------------------------------------------ |
-| docker pull minio/minio                              | 下载最新版Minio镜像 (其实此命令就等同于 : docker pull minio/minio:latest ) |
-| docker pull minio/minio:RELEASE.2023-10-24T04-42-36Z | 下载指定版本的Minio镜像 (RELEASE.2023-10-24T04-42-36Z指具体版本号)                    |
+| 命令                                                 | 描述                                                                         |
+| ---------------------------------------------------- | ---------------------------------------------------------------------------- |
+| docker pull minio/minio                              | 下载最新版 Minio 镜像 (其实此命令就等同于 : docker pull minio/minio:latest ) |
+| docker pull minio/minio:RELEASE.2023-10-24T04-42-36Z | 下载指定版本的 Minio 镜像 (RELEASE.2023-10-24T04-42-36Z 指具体版本号)        |
 
 2. 创建目录
 
-> 启动前需要先创建Minio外部挂载的配置文件（ /home/minio/config）,和存储上传文件的目录（ /home/minio/data）
+> 启动前需要先创建 Minio 外部挂载的配置文件（ /home/minio/config）,和存储上传文件的目录（ /home/minio/data）
 
-``` shell
+```shell
 mkdir -p /home/minio/config
 mkdir -p /home/minio/data
 ```
 
-3. 创建Minio容器并运行
+3. 创建 Minio 容器并运行
 
 > 多行模式
 
-``` shell
+```shell
 docker run -p 9000:9000 -p 9090:9090 \
      --net=host \
      --name minio \
@@ -121,43 +121,43 @@ docker run -p 9000:9000 -p 9090:9090 \
 
 > 单行模式
 
-``` shell
+```shell
 docker run -p 9000:9000 -p 9090:9090      --net=host      --name minio      -d --restart=always      -e "MINIO_ACCESS_KEY=minioadmin"      -e "MINIO_SECRET_KEY=minioadmin"      -v /home/minio/data:/data      -v /home/minio/config:/root/.minio      minio/minio server      /data --console-address ":9090" -address ":9000"
 ```
 
-> 9090端口指的是minio的客户端端口
+> 9090 端口指的是 minio 的客户端端口
 >
 > MINIO_ACCESS_KEY ：账号
 >
-> MINIO_SECRET_KEY ：密码（账号长度必须大于等于5，密码长度必须大于等于8位）
+> MINIO_SECRET_KEY ：密码（账号长度必须大于等于 5，密码长度必须大于等于 8 位）
 
 4. 访问操作
 
-访问：http://ip:9090/login 用户名：minioadmin 密码  ：minioadmin
+访问：http://ip:9090/login 用户名：minioadmin 密码 ：minioadmin
 
 ## MySQL
 
-1. 下载Minio镜像
+1. 下载 Minio 镜像
 
-| 命令                     | 描述                                                         |
-| ------------------------ | ------------------------------------------------------------ |
-| docker pull mysql        | 下载最新版MySQL镜像 (其实此命令就等同于 : docker pull mysql:latest ) |
-| docker pull mysql:8.0.33 | 下载指定版本的MySQL镜像 (8.0.33指具体版本号)                    |
+| 命令                     | 描述                                                                   |
+| ------------------------ | ---------------------------------------------------------------------- |
+| docker pull mysql        | 下载最新版 MySQL 镜像 (其实此命令就等同于 : docker pull mysql:latest ) |
+| docker pull mysql:8.0.33 | 下载指定版本的 MySQL 镜像 (8.0.33 指具体版本号)                        |
 
 2. 创建目录
 
-``` shell
+```shell
 mkdir -p /home/mysql/{conf,data,log}
 ```
 
 3. 创建配置文件
-``` shell
+
+```shell
 cd /home/mysql/conf
 vim my.cnf
 ```
 
-
-``` conf
+```txt
 [client]
 #设置客户端默认字符集utf8mb4
 default-character-set=utf8mb4
@@ -180,11 +180,12 @@ symbolic-links=0
 # 设置东八区时区
 default-time_zone = '+8:00'
 ```
-按键盘esc键退出输入，输入:wq保存退出
 
-4. 启动MySQL容器
+按键盘 esc 键退出输入，输入:wq 保存退出
 
-``` shell
+4. 启动 MySQL 容器
+
+```shell
 docker run \
 -p 3306:3306 \
 --restart=always \
@@ -197,15 +198,14 @@ docker run \
 -d mysql:8.0.33
 ```
 
-| 命令                    | 功能                                         |
-| :---------------------- | :------------------------------------------- |
-| -p                        | 表示端口映射                                 |
-| --restart=always        | 表示容器退出时总是重启 |
-| --name                   | 表示容器命名                    |
-| --privileged=true              | 表示赋予容器权限修改宿主文件权利 |
-| -v /home/mysql/log:/var/log/mysql              | 表示容器日志挂载到宿主机 |
-| -v /home/mysql/data:/var/lib/mysql  | 表示容器存储文件挂载到宿主机 |
-| -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf | 表示容器配置文件挂载到宿主机 |
-|-e MYSQL_ROOT_PASSWORD=a12bCd3_W45pUq6 | 表示设置mysql的root用户密码,建议用强密码 |
-| -d            | 表示后台运行 |
-
+| 命令                                         | 功能                                         |
+| :------------------------------------------- | :------------------------------------------- |
+| -p                                           | 表示端口映射                                 |
+| --restart=always                             | 表示容器退出时总是重启                       |
+| --name                                       | 表示容器命名                                 |
+| --privileged=true                            | 表示赋予容器权限修改宿主文件权利             |
+| -v /home/mysql/log:/var/log/mysql            | 表示容器日志挂载到宿主机                     |
+| -v /home/mysql/data:/var/lib/mysql           | 表示容器存储文件挂载到宿主机                 |
+| -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf | 表示容器配置文件挂载到宿主机                 |
+| -e MYSQL_ROOT_PASSWORD=a12bCd3_W45pUq6       | 表示设置 mysql 的 root 用户密码,建议用强密码 |
+| -d                                           | 表示后台运行                                 |
